monticore-generator/src/test/resources/cocos/invalid/A4102/A4102a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4102;

grammar A4102a {

  A = "a";

  astrule A =
    b:List<Optional<String>>;

}